<resources>
    <string name="app_name">JIRA Reconciler</string>
    <string name="settings">Settings</string>
    <string name="reconciliation">Reconciliation</string>
    <string name="issue_details">Issue details</string>
    <string name="jira_url">JIRA URL</string>
    <string name="jira_url_hint">Enter your JIRA URL</string>
    <string name="user">User</string>
    <string name="user_hint">Enter your JIRA user ID</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your JIRA password</string>
    <string name="scan_ticket">Scan ticket</string>
    <string name="new_reconciliation">New reconciliation</string>
    <string name="board_picker_title">Select board:</string>
    <string name="no_lanes">Selected board has no lanes</string>
    <string name="no_issues">Selected board has no issues</string>
    <string name="lane_captured">Lane captured</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="found_issues">Found %d issues.</string>
    <string name="delete">Delete</string>
    <string name="jira_status">JIRA Status:</string>
    <string name="loading_boards">Loading boards</string>
    <string name="loading_board_details">Loading board details</string>
    <string name="analyzing_lane">Analyzing captured lane</string>
    <string name="export_missing">Export missing cards</string>
    <string name="reconciliation_email_subject">Reconciliation: %1$s - %2$s</string>
    <string name="reconciliation_email_text">Attached you will find the missing task cards.</string>
    <string name="missing">Missing</string>
    <string name="reconciliations">Reconciliations</string>
    <string name="lane_picker_title">Select lanes:</string>
    <string name="no_lanes_selected">No lanes selected</string>
    <string name="toggle_all">Toggle All</string>
    <string name="select_export_action">Select action:</string>
    <string name="error_generating">Error occured while generating cards</string>
    <string name="generating_cards">Generating issue cards</string>
    <string name="error_board_details">Error retrieving board details.</string>
    <string name="error_board_list">Error retrieving list of boards.</string>
    <string name="security">Security</string>
    <string name="ssl_hint">Ignore certificate errors</string>
</resources>
