<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_new_reconciliation"
        android:orderInCategory="100"
        android:title="@string/new_reconciliation"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_item_scan_ticket"
        android:orderInCategory="200"
        android:title="@string/scan_ticket"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="300"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
</menu>
